--- a/search.html
+++ b/search.html
@@ -18,3 +18,42 @@
         <p style="margin-left:20px; font-size: 20px; color:darkgreen;">Click on the squares to search for wild life</p>
         <p id="tries" style="margin-left:20px; font-size: 20px; color:darkcyan;">Number of tries is zero.</p>
         <p id="distance" style="margin-left:20px; font-size: 20px; color:darkblue;">Distance is unknown.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+                <div class="col-sm-2"><img src="Tree.jpg" alt="Tree" style="width: 200px;height: 200px;"></div>
+            </div>
+        </div>
+        </body>
+        </html>
